pose validation changes

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
                 <canvas id="targetCanvas" width="300" height="300"></canvas>
             </div>
 
-            <div class="camera-section">
-                <h3>Live Camera</h3>
-                <video id="webcam" width="640" height="480" autoplay muted></video>
-            </div>
+            <div class="camera-detection-area">
+                <div class="camera-section">
+                    <h3>Live Camera</h3>
+                    <video id="webcam" width="400" height="300" autoplay muted></video>
+                </div>
 
-            <div class="visualization-section">
-                <h3>Pose Detection</h3>
-                <canvas id="visualizationCanvas" width="300" height="300"></canvas>
+                <div class="visualization-section">
+                    <h3>Pose Detection</h3>
+                    <canvas id="visualizationCanvas" width="400" height="300"></canvas>
+                </div>
             </div>
 
             <div class="score-section">
@@ -59,6 +61,7 @@
 
     <script src="scripts/camera.js"></script>
     <script src="scripts/roboflow.js"></script>
+    <script src="scripts/pose-comparison.js"></script>
     <script src="scripts/poses.js"></script>
     <script src="scripts/game.js"></script>
 </body>
