--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,12 @@
         </div>
     </div>
 
+    <script type="module" src="scripts/firebase-config.js"></script>
     <script src="scripts/camera.js"></script>
     <script src="scripts/roboflow.js"></script>
     <script src="scripts/pose-comparison.js"></script>
     <script src="scripts/poses.js"></script>
+    <script src="scripts/multiplayer.js"></script>
     <script src="scripts/game.js"></script>
 </body>
 </html>
