--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
         <header>
             <h1>Body Draw</h1>
             <p>Match poses with your body!</p>
+            <div class="game-modes">
+                <a href="create-room.html" class="multiplayer-link">🎮 Create Multiplayer Room</a>
+            </div>
         </header>
 
         <div class="game-area">
