--- a/public/lobby.html
+++ b/public/lobby.html
@@ -43,6 +43,18 @@
                 </div>
 
                 <div class="waiting-section">
+                    <div class="tips-section">
+                        <h3>🎯 Game Tips</h3>
+                        <ul class="tips-list">
+                            <li>IMPORTANT: You should allow your camera access to the game to work properly</li>
+                            <li>When the game starts, you will have 5 seconds for each photo</li>
+                            <li>The game will start automatically when the admin starts it</li>
+                            <li>Try to fit in the camera frame as similar to the target image </li>
+                            <li>Have fun!</li>
+
+                        </ul>
+                    </div>
+                    
                     <div class="waiting-message">
                         <div class="loading-spinner"></div>
                         <h3>Waiting for host to start the game...</h3>
