--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,7 @@
     <script src="scripts/pose-comparison.js"></script>
     <script src="scripts/poses.js"></script>
     <script src="scripts/multiplayer.js"></script>
+    <script src="scripts/poses-config.js"></script>
     <script src="scripts/game.js"></script>
 </body>
 </html>
