--- a/public/results.html
+++ b/public/results.html
@@ -45,6 +45,7 @@
     <!-- Scripts -->
     <script type="module" src="scripts/firebase-config.js"></script>
     <script src="scripts/multiplayer.js"></script>
+    <script src="scripts/poses-config.js"></script>
     <script src="scripts/results.js"></script>
 </body>
 </html>
